--- a/Classification/a3.ipynb
+++ b/Classification/a3.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CS579: Assignment 3\n",
+    "# Classification using Machine Learning- Logistic Regression \n",
     "\n",
-    "In this assignment, you will fit a text classifier to categorize movie reviews by sentiment."
+    "This notbook will show, How to fit a text classifier and to categorize movie reviews by sentiment."
    ]
   },
   {
